Morpheus Rubrik Backup Plugin.

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'morpheus-plugin-site'
 include 'morpheus-plugin-docs'
 include 'morpheus-test-provider'
 include 'morpheus-infoblox-plugin'
+include 'morpheus-rubrik-plugin'
 include 'morpheus-aws-billing-export-plugin'
 include ':samples:morpheus-task-plugin'
 include ':samples:morpheus-tab-plugin'
@@ -10,3 +11,4 @@ include ':samples:morpheus-approvals-plugin'
 include ':samples:morpheus-cypher-plugin'
 include ':samples:morpheus-cloud-plugin'
 include 'morpheus-apiutil-compat'
+
